--- a/src/scss/_step-slider.scss
+++ b/src/scss/_step-slider.scss
@@ -1,3 +1,7 @@
+.register-stepper {
+  margin: auto;
+}
+
 .step-slider {
   display: flex;
   width: 580px;
@@ -28,6 +32,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    transition: opacity 0.2s ease-in-out;
 
     label {
       text-align: center;
@@ -135,7 +140,7 @@
       border-radius: 50%;
       border: 1px solid var(--color-text);
 
-      &.active {
+      &.--active {
         background: var(--color-text);
       }
     }
@@ -144,15 +149,18 @@
   &__message-block {
     min-height: 75px;
     text-align: center;
-    max-width: 360px;
     padding-top: 15px;
-    width: 100%;
     position: absolute;
     bottom: -20px;
-    left: 0;
+    left: -5%;
+    width: 110%;
 
     .form-group__error {
       padding: 0 12px;
+      max-width: 360px;
+      margin: auto;
+      left: 0;
+      right: 0;
     }
 
     a {
